feat: improve open api naming
