# backend/src/api/customers/middlewares.ts
@@ -12,6 +12,7 @@ export default [
   {
     method: 'GET',
     matcher: '/customers',
+    operationId: 'listCustomers',
     summary: 'List customers',
     tags: [Tags.CUSTOMERS],
     responseSchema: CustomerListResponse,
@@ -20,6 +21,7 @@ export default [
     method: 'POST',
     matcher: '/customers',
     bodySchema: CreateCustomers,
+    operationId: 'createCustomers',
     summary: 'Create customers',
     tags: [Tags.CUSTOMERS],
     responseSchema: CustomerListResponse,
@@ -28,6 +30,7 @@ export default [
     method: 'GET',
     matcher: '/customers/:id',
     paramsSchema: IdParams,
+    operationId: 'getCustomer',
     summary: 'Retrieve a customer',
     tags: [Tags.CUSTOMERS],
     responseSchema: CustomerResponse,
@@ -37,6 +40,7 @@ export default [
     matcher: '/customers/:id',
     paramsSchema: IdParams,
     bodySchema: UpdateCustomer,
+    operationId: 'updateCustomer',
     summary: 'Update a customer',
     tags: [Tags.CUSTOMERS],
     responseSchema: CustomerResponse,
@@ -45,6 +49,7 @@ export default [
     method: 'DELETE',
     matcher: '/customers/:id',
     paramsSchema: IdParams,
+    operationId: 'deleteCustomer',
     summary: 'Delete a customer',
     tags: [Tags.CUSTOMERS],
     responseSchema: CustomerDeleteResponse,
