# backend/src/core/http-schemas/user/responses.ts
@@ -1,6 +1,6 @@
 import { z } from 'zod'
 import { User } from './entities.js'
 
-export const UserResponse = z.object({ user: User })
-export const UserListResponse = z.object({ users: z.array(User) })
-export const UserDeleteResponse = z.object({ id: z.string(), deleted: z.boolean() })
+export const UserResponse = z.object({ user: User }).openapi('UserResponse')
+export const UserListResponse = z.object({ users: z.array(User) }).openapi('UserListResponse')
+export const UserDeleteResponse = z.object({ id: z.string(), deleted: z.boolean() }).openapi('UserDeleteResponse')
